Fixed text alignment (now centered)

--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,7 @@
 #applause div {
     display:table-cell !important;
     vertical-align:middle !important;
+    text-align: center !important;
 }
 
 #applause.applause-voted {
@@ -47,7 +48,6 @@
 
 #applause span.applause-count {
     width: 75px !important;
-    text-align: center !important;
     font-size:40px !important;
     font-weight:bold !important;
     line-height:1 !important;
@@ -55,5 +55,4 @@
 
 #applause span.applause-action {
     font-size:12px !important;
-    text-align: center !important;
 }
